# soul-svn

head/: Doxyfile  Makefile.am  configure  configure.in
head/soul/: Makefile.am  demangle.h  parser.cpp  parser.h  smartpointer.h  xquery.cpp  xquerygrammar.cpp  xquerygrammar.h
head/src/: Makefile.am  Makefile.in  parser.cpp  parser.h  smartpointer.h  xquery.cpp  xquerygrammar.cpp  xquerygrammar.h
head/templates/: h
